--- a/services.html
+++ b/services.html
@@ -86,9 +86,9 @@
 	        				<div class="about-service">
 		        				<h3 class="text-center">Diagnostic Imaging</h3>
 		        				<p class="text-center">
-		        					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		                       		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		                       		quis nostrud 
+		        					Lorem ipsum carrots, enhanced rebates, but they do occaecat
+labor and in pain, and vitality, so that at some important things to. Over the years, I will come,
+who nostrud
 		        				</p>
 		        			</div>
 	        			</div>
@@ -106,9 +106,9 @@
 	        				<div class="about-service">
 		        				<h3 class="text-center">Cancer Care</h3>
 		        				<p class="text-center">
-		        					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		                       		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		                       		quis nostrud 
+		        					Lorem ipsum carrots, enhanced rebates, but they do occaecat
+labor and in pain, and vitality, so that at some important things to. Over the years, I will come,
+who nostrud
 		        				</p>
 		        			</div>
 	        			</div>
@@ -126,9 +126,9 @@
 	        				<div class="about-service">
 		        				<h3 class="text-center">Rehabilitation Center</h3>
 		        				<p class="text-center">
-		        					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		                       		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		                       		quis nostrud 
+		        					Lorem ipsum carrots, enhanced rebates, but they do occaecat
+labor and in pain, and vitality, so that at some important things to. Over the years, I will come,
+who nostrud
 		        				</p>
 		        			</div>
 	        			</div>
@@ -146,9 +146,9 @@
 	        				<div class="about-service">
 		        				<h3 class="text-center">Emergency Services</h3>
 		        				<p class="text-center">
-		        					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		                       		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		                       		quis nostrud 
+		        					Lorem ipsum carrots, enhanced rebates, but they do occaecat
+labor and in pain, and vitality, so that at some important things to. Over the years, I will come,
+who nostrud
 		        				</p>
 		        			</div>
 	        			</div>
@@ -165,9 +165,9 @@
 	        				<div class="about-service">
 		        				<h3 class="text-center">Transplant Services</h3>
 		        				<p class="text-center">
-		        					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		                       		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		                       		quis nostrud 
+		        					Lorem ipsum carrots, enhanced rebates, but they do occaecat
+labor and in pain, and vitality, so that at some important things to. Over the years, I will come,
+who nostrud
 		        				</p>
 		        			</div>
 	        			</div>
@@ -183,9 +183,9 @@
 		        			<div class="about-service">
 		        				<h3 class="text-center">24 Hours Service</h3>
 		        				<p class="text-center">
-		        					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		                       		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		                       		quis nostrud 
+		        					Lorem ipsum carrots, enhanced rebates, but they do occaecat
+labor and in pain, and vitality, so that at some important things to. Over the years, I will come,
+who nostrud
 		        				</p>
 		        			</div>
 		        		</div>
@@ -229,7 +229,7 @@
 							        		<div class="col-md-7">
 							        			<h3>Latest Diagnostic Technology</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -244,7 +244,7 @@
 							        		<div class="col-md-7">
 							        			<h3>Complete Dental Care</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -259,7 +259,7 @@
 							        		<div class="col-md-7">
 							        			<h3>Blood Donation - You can also save life</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -274,7 +274,7 @@
 							        		<div class="col-md-7">
 							        			<h3>Elderly Care</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -291,7 +291,7 @@
 							        		<div class="col-md-7">
 							        			<h3>Always Take Care of Your Teeth</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -305,7 +305,7 @@
 							        		<div class="col-md-7">
 							        			<h3>Complete Dental Care</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -322,7 +322,7 @@
 							        		<div class="col-md-7">
 							        			<h3>Latest Diagnostic Technology</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -337,7 +337,7 @@
 							        		<div class="col-md-7">
 							        			<h3>Women's Diagnostic Imaging In A Comforting Environment.</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -355,7 +355,7 @@
 							        		<div class="col-md-7">
 							        			<h3>Enhanced Rehabilitation</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -370,7 +370,7 @@
 							        		<div class="col-md-7">
 							        			<h3>Elderly Care</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -388,7 +388,7 @@
 							        		<div class="col-md-7">
 							        			<h3>You're Welcome To Donate Our Clinic</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -403,7 +403,8 @@
 							        		<div class="col-md-7">
 							        			<h3>Blood Donation - You can also save life</h3>
 							        			<p>
-							        				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae earum quod aliquid nulla ab obcaecati aut quae, illum voluptates maxime. Mollitia eius voluptas laboriosam odio quod quisquam aliquid quas obcaecati.
+							        				
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit. Been blinded by them, or that there is something which no amount of ab Repudiandae, it most sensual pleasures. Shall any man at his pleasure, despite the fact that he had been blinded by an intense disgraceful cowardice.
 							        			</p>
 							        			<a href="#" class="service-rm-btn btn btn-primary">
 											View Full Description <i class="fa fa-caret-right"></i></a>
@@ -518,6 +519,3 @@
 				$(this).tab('show')
 			})
 		</script>
-		
-	</body>
-</html>
