--- a/doctors.html
+++ b/doctors.html
@@ -85,7 +85,7 @@
 
 								<div class= "row">
 									<div class= "doctor-name text-center">
-										john doe
+										R. Pavan 
 									</div>
 								</div>
 
@@ -98,7 +98,7 @@
 								<div class= "row">
 									<div class= "doctor-des text-center">
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores minima eaque blanditiis ipsa, doloribus consectetur provident officiis voluptatem magni molestias optio eius, minus aliquam fugit officia temporibus aspernatur voluptatibus nesciunt!
+											Orthopedists handle the disorders, injuries, prevention, treatment, and repair of the skeletal system and its related joints, ligaments, and muscles. Orthopedists and orthopedic surgeons are specially trained in the diagnosis and treatment of bone and joint disease.
 										</p>
 									</div>
 								</div>
@@ -130,7 +130,7 @@
 							<div class= "doctor-info">
 								<div class= "row">
 									<div class= "doctor-name text-center">
-										john doe
+										 Priya
 									</div>
 								</div>
 								<div class= "row">
@@ -141,7 +141,7 @@
 								<div class= "row">
 									<div class= "doctor-des text-center">
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores minima eaque blanditiis ipsa, doloribus consectetur provident officiis voluptatem magni molestias optio eius, minus aliquam fugit officia temporibus aspernatur voluptatibus nesciunt!
+											A gynecologist is a doctor who specializes in women's reproductive health. Obstetricians care for women during their pregnancy and just after the baby is born. They also deliver babies. An ob-gyn is trained to do all of these things.
 										</p>
 									</div>
 								</div>
@@ -173,7 +173,7 @@
 							<div class= "doctor-info">
 								<div class= "row">
 									<div class= "doctor-name text-center">
-										john doe
+										R.P. Krishna
 									</div>
 								</div>
 								<div class= "row">
@@ -184,7 +184,7 @@
 								<div class= "row">
 									<div class= "doctor-des text-center">
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores minima eaque blanditiis ipsa, doloribus consectetur provident officiis voluptatem magni molestias optio eius, minus aliquam fugit officia temporibus aspernatur voluptatibus nesciunt!
+											 who has special training in diagnosing and treating diseases of the ear, nose, and throat. Also called otolaryngologist.
 										</p>
 									</div>
 								</div>
@@ -216,7 +216,7 @@
 							<div class= "doctor-info">
 								<div class= "row">
 									<div class= "doctor-name text-center">
-										john doe
+										Abhin
 									</div>
 								</div>
 								<div class= "row">
@@ -227,7 +227,7 @@
 								<div class= "row">
 									<div class= "doctor-des text-center">
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores minima eaque blanditiis ipsa, doloribus consectetur provident officiis voluptatem magni molestias optio eius, minus aliquam fugit officia temporibus aspernatur voluptatibus nesciunt!
+											Radiologists are medical doctors that specialize in diagnosing and treating injuries and diseases using medical imaging (radiology) procedures (exams/tests) such as X-rays, computed tomography (CT), magnetic resonance imaging (MRI), nuclear medicine, positron emission tomography (PET) and ultrasound.
 										</p>
 									</div>
 								</div>
@@ -259,7 +259,7 @@
 							<div class= "doctor-info">
 								<div class= "row">
 									<div class= "doctor-name text-center">
-										john doe
+										B. Pavan
 									</div>
 								</div>
 								<div class= "row">
@@ -270,7 +270,7 @@
 								<div class= "row">
 									<div class= "doctor-des text-center">
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores minima eaque blanditiis ipsa, doloribus consectetur provident officiis voluptatem magni molestias optio eius, minus aliquam fugit officia temporibus aspernatur voluptatibus nesciunt!
+											A cardiologist diagnoses and treats problems of the heart and blood vessels. These include: Heart attack. Heart failure.
 										</p>
 									</div>
 								</div>
@@ -302,7 +302,7 @@
 							<div class= "doctor-info">
 								<div class= "row">
 									<div class= "doctor-name text-center">
-										john doe
+										boppana
 									</div>
 								</div>
 								<div class= "row">
@@ -313,7 +313,7 @@
 								<div class= "row">
 									<div class= "doctor-des text-center">
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores minima eaque blanditiis ipsa, doloribus consectetur provident officiis voluptatem magni molestias optio eius, minus aliquam fugit officia temporibus aspernatur voluptatibus nesciunt!
+											 tooth decay, fill cavities, and repair fractured teeth. Dentists diagnose and treat problems with patients' teeth, gums, and related parts of the mouth. They provide advice and instruction on taking care of the teeth and gums and on diet choices that affect oral health.
 										</p>
 									</div>
 								</div>
@@ -438,4 +438,3 @@
 
 	</body>
 </html>
-
