--- a/doctors.html
+++ b/doctors.html
@@ -135,7 +135,7 @@
 								</div>
 								<div class= "row">
 									<div class= "position text-center">
-										gynecologist
+										Gynecologist
 									</div>
 								</div>
 								<div class= "row">
@@ -178,13 +178,13 @@
 								</div>
 								<div class= "row">
 									<div class= "position text-center">
-										ent specialist
+										ENT Specialist
 									</div>
 								</div>
 								<div class= "row">
 									<div class= "doctor-des text-center">
 										<p>
-											 who has special training in diagnosing and treating diseases of the ear, nose, and throat. Also called otolaryngologist.
+											 He/She has special training in diagnosing and treating diseases of the ear, nose, and throat. Also called otolaryngologist.
 										</p>
 									</div>
 								</div>
@@ -221,7 +221,7 @@
 								</div>
 								<div class= "row">
 									<div class= "position text-center">
-										radiologist
+										Radiologist
 									</div>
 								</div>
 								<div class= "row">
@@ -264,7 +264,7 @@
 								</div>
 								<div class= "row">
 									<div class= "position text-center">
-										cardiologist
+										Cardiologist
 									</div>
 								</div>
 								<div class= "row">
@@ -302,12 +302,12 @@
 							<div class= "doctor-info">
 								<div class= "row">
 									<div class= "doctor-name text-center">
-										boppana
+										Boppana
 									</div>
 								</div>
 								<div class= "row">
 									<div class= "position text-center">
-										dentist
+										Dentist
 									</div>
 								</div>
 								<div class= "row">
